--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/username/repository.git"
+    "url": "git://github.com/NamanSatish/kgcpdfback.git"
   },
   "author": "Naman Satish",
-  "license": "GNU GENERAL PUBLIC LICENSE",
+  "license": "GPL-3.0-or-later",
   "dependencies": {
     "cors": "^2.8.5",
     "date-and-time": "^0.9.0",
     "express": "^4.17.1",
-    "firebase": "^7.7.0",
+    "firebase": "^7.8.0",
     "fix": "0.0.6",
     "localtunnel": "^1.9.2",
     "lodash": "^4.17.15",
@@ -31,12 +31,14 @@
     "nedb": "^1.8.0",
     "node-gyp": "^6.1.0",
     "pdf-form-fill": "^0.2.1",
+    "pdffiller": "0.0.11",
+    "pkg-config": "^1.1.1",
     "request": "^2.88.0",
     "underscore.string": "^3.3.5"
   },
   "devDependencies": {
     "morgan": "^1.9.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.4"
   },
   "description": ""
 }
